# lifespan

./: .gitignore  CHANGELOG.md  FIXES-QUICK-TEST.md  PARALLEL-TEST-GUIDE.md  README.md  TESTING-GUIDE.md  parallel-test.bat
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/collector/: event_queue.rs  idle_detector.rs  mod.rs  window_tracker.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/database/: connection.rs  mod.rs
apps/desktop/src-tauri/src/encryption/: mod.rs
apps/desktop/src-tauri/src/sync/: client.rs  mod.rs
